# color-picker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html  style.css  vcpkg.json
.github/workflows/: build.yml  release.yml  web.yml
assets/: main.css
src/: main.cpp  main.rs
src/color/: Color.cpp  Color.hpp  Conversion.cpp  Conversion.hpp
src/frame/: App.cpp  App.hpp  MainFrame.cpp  MainFrame.hpp
src/gui/: ColorPickerCanvas.cpp  ColorPickerCanvas.hpp  ColorPreviewPanel.cpp  ColorPreviewPanel.hpp  ColorSlidersPanel.cpp  ColorSlidersPanel.hpp  ColorSwatch.cpp  ColorSwatch.hpp  ConvertPanel.cpp  ConvertPanel.hpp  HarmonyPanel.cpp  HarmonyPanel.hpp  PalettePanel.cpp  PalettePanel.hpp
